# DeskLink

./: .gitignore  HANDOFF.md  LICENSE  README.md
.github/workflows/: ios-build.yml  server.yml
docs/: ARCHITECTURE.md  INSTALL_IOS.md  LATENCY.md  PROTOCOL.md  PUSH_TO_GITHUB.md
ios/: project.yml
ios/DeskLink/: DeskLinkApp.swift
ios/DeskLink/Audio/: AudioEngine.swift  OpusCodec.swift
ios/DeskLink/LiveActivity/: NowPlayingController.swift
ios/DeskLink/Models/: AppModel.swift  Shared.swift
ios/DeskLink/Networking/: DeskLinkClient.swift  Discovery.swift  Protocol.swift
ios/DeskLink/Resources/: Info.plist
ios/DeskLink/Views/: ContentView.swift  DiscoveryView.swift  PairingView.swift  PlayerView.swift
ios/DeskLinkWidget/: DeskLinkLiveActivity.swift  DeskLinkWidgetBundle.swift  Info.plist
server/: README.md  pyproject.toml  requirements.txt  run.bat  run.ps1
server/desklink/: __init__.py  __main__.py  config.py  discovery.py  gui.py  protocol.py  server.py
server/desklink/audio/: __init__.py  capture.py  codec.py  playback.py  vmic.py
server/desklink/metadata/: __init__.py  smtc.py
server/tests/: test_protocol.py  test_server_handshake.py
tools/webtest/: index.html
